landing page ui fixes on small screens'

--- a/assets/scss/components/_list-responsive.scss
+++ b/assets/scss/components/_list-responsive.scss
@@ -123,7 +123,7 @@
     .list-col-item {
       line-height: 1.8;
       margin: 0 auto;
-      font-size: 15pt;
+      font-size: 11pt;
       text-align: center;
     }
 
@@ -171,7 +171,7 @@
     }
 
     h5 {
-      font-size: 9pt;
+      font-size: 9pt !important;
     }
   }
 
