--- a/assets/scss/landing.scss
+++ b/assets/scss/landing.scss
@@ -52,9 +52,14 @@
 
   .bg-container {
     &:before {
+      position: absolute;
+      left: 0;
       display: block;
       content: '';
       width: 100%;
+      height: 700px;
+      background: #ebe2d3 url(../images/landing/bg-shingles.jpg) no-repeat bottom center;
+      background-size: 100%;
     }
   }
 
@@ -252,6 +257,33 @@
       font-family: $main-font;
       font-weight: 400;
       color: #aeb0b3;
+    }
+  }
+
+  // Uniq styles for this particular case
+  .landing-search-pro {
+    padding-top: 0;
+
+    .logo-outer-container {
+      position: relative;
+      width: 96%;
+
+      .logo-container {
+        flex-direction: row-reverse;
+        justify-content: center;
+
+        .logo {
+          position: absolute;
+          top: 0;
+          right: 30px;
+        }
+      }
+    }
+
+    .search-pros-inner {
+      .pros-container {
+        background-color: transparent;
+      }
     }
   }
 }
